
== tekUI Changelog ==

=== 1.05: ===

 * Added PNG file format support
 * Added loading images and rendering with alpha channel
 * RawFB driver: Added support for drawing bitmaps with alpha channel

=== 1.04: ===

 * ui, Application: Added UserStyles variable
 * Removed use of the init() function
 * CheckMark:getAttr() removed
 * Area:beginPopup() added
 * PopItem: now uses child:beginPopup() to prepare an element for being used
 in a popup
 * Widget:getPseudoClass() now gives hover precendece if the element is in a
 popup
 * Window:update() could try to relayout elements without a rectangle,
 corrected
 * Added some CSS documentation

=== 1.03: ===

 * Bug in Area class (C version) fixed: Did not differentiate between
 layouted rectangle 'unset' and 'zero'

=== 1.02: ===

 * PopItem: getPseudoClass() removed
 * Window: relayout() removed
 * TextList: improved logic for latching on list top or bottom
 * ScrollGroup: added HValue, VValue, H/VMax/Min/Range/Value are now
 always updated
 * runxml: version added
 * some corrections in examples
 * Application, Area (Lua version): small optimizations
 * VNC server: Now using a nonblocking socket for signalling, maxfd is
 constantly updated
 * TextEdit: AutoPosition reenabled, fixes regression
 * Slider, Gauge: now uses rethinkLayout() instead of Window.relayout(),
 leading to visually tighter updates
 * Input, EditWindow: clicking outside the element stops editing
 * UI, Area, Canvas, Group, PopItem, Sizeable, TextEdit, Widget, Window:
 Added flags FL_AUTOPOSITION, FL_ERASEBG, FL_TRACKDAMAGE, FL_ACTIVATERMB,
 FL_INITIALFOCUS
    
=== 1.01: ===

 * Area: C version erase() did not use texture origins, corrected, in
 setFlags() now only newly set flags cause FL_UPDATE to bubble up
 * String: Fixed a bug in range calculation that could corrupt the heap
 * Window: Added support for initializing HoldTickFirst and -Repeat
 * Added XML runner, examples and documentation