@@ -1,5 +1,5 @@
 = tekUI GUI Toolkit =
 
-Version 1.05
+Version 1.06
 
 ---------------------------------------------------------------------
