@@ -10,6 +10,29 @@
 		<h2>
 			tekUI Changelog
 		</h2>
+		<blockquote>
+			<ul>
+				<li>
+					config.h, config, Makefiles: Some Mac OS X support added
+				</li>
+				<li>
+					<a href="manual.html#FloatText:erase"><code>FloatText:erase()</code></a> did not check for a DamageRegion, corrected
+				</li>
+				<li>
+					X11, Visual: some sanity checks added to drawbuffer and drawgradient
+				</li>
+				<li>
+					TextEdit: disabled window update suspension, disabled AutoIndent by
+					default, corrections to cursor updates and text width recalculation
+				</li>
+				<li>
+					EditWindow: enabled AutoIndent by default
+				</li>
+				<li>
+					<a href="manual.html#Input:handleKeyboard"><code>Input:handleKeyboard()</code></a>, cursorSOF/EOF/SOL/<a href="manual.html#EOL"><code>EOL()</code></a> added
+				</li>
+			</ul>
+		</blockquote>
 		<h3>
 			1.05:
 		</h3>
