@@ -11,7 +11,7 @@
 			tekUI GUI Toolkit
 		</h1>
 		<p>
-			Version 1.05
+			Version 1.06
 		</p>
 		<hr />
 		<h2>
@@ -614,7 +614,7 @@
 						LibVNCServer-0.9.9 (for the rawfb driver, disabled by default)
 					</li>
 					<li>
-						libpng (for PNG support, disbled by default)
+						libpng (for PNG support, disabled by default)
 					</li>
 					<li>
 						MinGW (for the Windows platform)
@@ -655,8 +655,7 @@
 		</div>
 		<div class="node"><h2><a name="buildenv" id="buildenv">3.2. Adjusting the build environment</a></h2>
 			<p>
-				TekUI was at some point tested and should compile and run out of the
-				box on
+				TekUI was at some point tested and should compile and run on:
 			</p>
 			<blockquote>
 				<ul>
@@ -673,6 +672,9 @@
 					</li>
 					<li>
 						Windows (tested: 2000, Wine)
+					</li>
+					<li>
+						Mac OS X (tested: X11 display driver)
 					</li>
 				</ul>
 			</blockquote>
