@@ -8,7 +8,7 @@
 **	See copyright notice in teklib/COPYRIGHT
 */
 
-#if defined(TSYS_POSIX) || defined(__linux) || defined(__FreeBSD__) || defined(__NetBSD__)
+#if defined(TSYS_POSIX) || defined(__linux) || defined(__FreeBSD__) || defined(__NetBSD__) || defined(__APPLE__)
 	#ifndef TSYS_POSIX
 		#define TSYS_POSIX
 	#endif
