@@ -1,7 +1,7 @@
 
 /*
 **	tek/ui/style/gradient.css - Gradient effect on windows and buttons
-**	Version: 1.2
+**	Version: 1.3
 */
 
 tek.ui.class.window {
@@ -29,7 +29,7 @@ tek.ui.class.group {
 }
 
 tek.ui.class.canvas {
-	background-color: transparent;
+/* 	background-color: transparent; */ /* better not! */
 }
 
 tek.ui.class.floattext {
